--- a/styles/error.scss
+++ b/styles/error.scss
@@ -41,7 +41,7 @@ header .error_text_container {
 @include mobile_small {
     header .error_text_container {
         h2 {
-            font-size: $heading_2_t !important;
+            font-size: $heading_3 !important;
         }
     }
 
