--- a/styles/global/_footer.scss
+++ b/styles/global/_footer.scss
@@ -43,7 +43,7 @@ footer.footer_area {
 
 @media screen and (max-width:1040px) {
     footer.footer_area {
-        font-size: $paragraph_t;
+        font-size: $paragraph;
         padding: 1rem 2rem;
 
         .social_container {
