--- a/styles/about.scss
+++ b/styles/about.scss
@@ -1,32 +1,12 @@
-@import './global/global';
-@import './global/navigation';
-@import './global/footer';
-@import './global/responsive';
+@import "./global/global";
+@import "./global/navigation";
+@import "./global/footer";
+@import "./global/responsive";
 
 //? HEADER STYLING
 header {
     @include make_header();
 }
-
-//? HERO AREA CONTENT STYLING
-header .hero_text_container {
-    position: absolute;
-    width: 100%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: $color_white;
-
-    h1 {
-        font-size: $heading_1;
-    }
-
-    h3 {
-        font-size: $heading_3
-    }
-}
-
 
 //? MAIN BODY CONTENT STYLING
 main {
@@ -64,7 +44,7 @@ main {
             }
 
             display: grid;
-            grid-template-areas: 'founder founder_img';
+            grid-template-areas: "founder founder_img";
             gap: 6rem;
         }
 
@@ -91,7 +71,7 @@ main {
             }
 
             display: grid;
-            grid-template-areas: 'team_img team';
+            grid-template-areas: "team_img team";
             gap: 8rem;
             margin-top: 8rem;
         }
@@ -116,7 +96,7 @@ main {
         }
 
         display: grid;
-        grid-template-areas: 'work1 work2 work3 work4';
+        grid-template-areas: "work1 work2 work3 work4";
 
         .work {
             text-align: center;
@@ -165,126 +145,11 @@ main {
                     top: 0;
                     left: 0;
                     object-fit: cover;
-                    transition: all .5s ease-in-out;
+                    transition: all 0.5s ease-in-out;
                 }
             }
-
         }
     }
-
-    //? FOR CONTACT US SECTION
-    section.contact_us {
-        @include make_contact_section();
-    }
 }
-
-
 
 //? RESPONSIVE DESIGN
-@media screen and (max-width: 1000px) {
-    section.about_us_area {
-
-        .about_founder_container,
-        .about_team_container {
-            gap: 2rem !important;
-        }
-    }
-
-    section.work_counter {
-        grid-template-areas: 'work1 work2' 'work3 work4' !important;
-        gap: 4rem;
-    }
-}
-
-@media screen and (max-width: 830px) {
-    section.about_us_area {
-        .about_founder_container {
-            grid-template-areas: 'founder_img' 'founder' !important;
-        }
-
-        .about_team_container {
-            grid-template-areas: 'team_img' 'team' !important;
-        }
-    }
-
-    section.instagram_work_area {
-        .insta_pic_area {
-            margin-top: 2rem !important;
-            grid-template-columns: repeat(2, 1fr) !important;
-        }
-    }
-}
-
-@include tablet {
-    header .hero_text_container {
-        h1 {
-            font-size: $heading_1_t;
-        }
-    }
-
-    section.section {
-        padding: 4rem 2rem 0 !important;
-
-        .about_founder_container,
-        .about_team_container {
-            margin-top: 4rem !important;
-
-            h3 {
-                font-size: $heading_3_t !important;
-                margin-bottom: 1rem !important;
-            }
-        }
-    }
-
-    section.instagram_work_area {
-        h3.section_title {
-            font-size: $heading_3_t !important;
-            margin-bottom: 1rem !important;
-        }
-    }
-
-    section.contact_us {
-        margin: 4rem 0rem !important;
-    }
-}
-
-@include mobile {
-    header .hero_text_container {
-        h1 {
-            font-size: $heading_2_t;
-        }
-    }
-
-    section.section {
-        padding: 2rem 2rem !important;
-    }
-
-    .about_founder_container,
-    .about_team_container {
-        p {
-            font-size: $paragraph_t;
-        }
-    }
-
-    section.work_counter {
-        gap: 1rem;
-
-        h1 {
-            font-size: $heading_2_t !important;
-        }
-
-        h4 {
-            font-size: $paragraph_t;
-        }
-    }
-
-    section.instagram_work_area {
-        h3 {
-            text-align: left !important;
-        }
-
-        .insta_pic_area {
-            grid-template-columns: repeat(1, 1fr) !important;
-        }
-    }
-}
