--- a/styles/style.scss
+++ b/styles/style.scss
@@ -381,6 +381,111 @@ main {
             }
         }
     }
+
+    main section.portfolio_section {
+        gap: 2rem;
+
+        .portfolio_info_area {
+            display: flex;
+            justify-content: space-between;
+            flex-direction: column;
+
+            .portfolio_info_area_left {
+                flex: 2fr;
+                width: 200%;
+
+                .portfolio_section_title {
+                    font-size: $heading_3;
+                }
+            }
+
+            .portfolio_info_area_right {
+                width: 100%;
+                flex: 1fr;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+
+                .portfolio_section_btn {
+                    background: $color_primary_light;
+                    border: 1px solid $color_primary;
+                    padding: 0.6rem 2rem;
+                    align-self: flex-start;
+                    border-radius: 10rem;
+                    color: $color_primary;
+                    font-family: $open_sans;
+                    text-transform: uppercase;
+                    font-size: 14px;
+                    font-weight: bold;
+                    transition: all 0.2s ease-in-out;
+
+                    &:hover {
+                        background-color: $color_primary;
+                        color: $color_white;
+                    }
+                }
+            }
+        }
+
+        .portfolio_img_area {
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            gap: 2rem;
+
+            .grid_col_span_2 {
+                grid-column: span 2;
+            }
+
+            .portfolio_img_card {
+                background-color: $dark100;
+                width: 100%;
+                overflow: hidden;
+                position: relative;
+                border-radius: $border_radius;
+
+                .portfolio_img {
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                    opacity: 30%;
+                    transition: all 0.2s ease-in-out;
+                }
+
+                .portfolio_img_text_area {
+                    position: absolute;
+                    bottom: 0%;
+                    color: $color_white;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: flex-start;
+                    align-items: flex-start;
+                    gap: 0.5rem;
+                    width: 100%;
+                    padding: 1.5rem;
+                    background: linear-gradient(180deg, #00000003, $dark75);
+
+                    .portfolio_img_title {
+                        font-family: $open_sans;
+                    }
+
+                    .portfolio_img_sub_title {
+                        font-size: 14px;
+                    }
+
+                    .line {
+                        content: "";
+                        background: $color_white;
+                        width: 100%;
+                        height: 0.02rem;
+                    }
+                }
+
+                &:hover > .portfolio_img {
+                    opacity: 80%;
+                }
+            }
+        }
+    }
 }
 
 @include mobile {
